topbanner 배너 완성

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     .gnb ul li::after{content:""; width: 1px; height: 20px; display: block; position: absolute; right: 0; top: 10px; background-color: #666;}
     .gnb ul li:last-child:after{display: none;}
     .gnb ul a{display: block; color: #FFF; text-align: center; line-height: 40px;}
+
+    #topBanner{position: relative;}
+    #topBanner img{width: 100%;}
 </style>
 <body>
     <header id="header">
@@ -34,5 +37,8 @@
             <li><a href="#">MENU</a></li>
         </ul>
     </nav>
+    <section id="topBanner">
+        <img src="img/b0.jpg" alt="">
+    </section>
 </body>
 </html>
