--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 
     #topBanner{position: relative;}
     #topBanner img{width: 100%;}
+
+    #best{position: relative; width: 90%; margin: 100px auto;}
+    #best h2{font-size: 20px; text-align: center; margin-bottom: 50px;}
+    #best ul{display: flex; flex-wrap: wrap; justify-content: space-between;}
+    #best ul li{width: 49%; margin-bottom: 3%;}
+    #best ul li h3{font-size: 16px; text-align: center;}
+    #best ul li img{width: 100%;}
 </style>
 <body>
     <header id="header">
@@ -39,6 +46,23 @@
     </nav>
     <section id="topBanner">
         <img src="img/b0.jpg" alt="">
+    </section>
+    <section id="best">
+        <h2>Best Product</h2>
+        <ul>
+            <li><img src="img/poster1.jpg" alt="포스터">
+                <h3>Poster-1</h3>
+            </li>
+            <li><img src="img/poster2.jpg" alt="포스터">
+                <h3>Poster-2</h3>
+            </li>
+            <li><img src="img/poster3.jpg" alt="포스터">
+                <h3>Poster-3</h3>
+            </li>
+            <li><img src="img/poster4.jpg" alt="포스터">
+                <h3>Poster-4</h3>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
