--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     #best ul li{width: 49%; margin-bottom: 3%;}
     #best ul li h3{font-size: 16px; text-align: center;}
     #best ul li img{width: 100%;}
+    
+    #event{position: relative; width: 90%; margin: 100px auto;}
+    #event img{width: 100%;}
 </style>
 <body>
     <header id="header">
@@ -63,6 +66,9 @@
                 <h3>Poster-4</h3>
             </li>
         </ul>
+    </section>
+    <section id="event">
+        <img src="img/s3.png" alt="">
     </section>
 </body>
 </html>
