탑배너까지 완성

--- a/about.html
+++ b/about.html
@@ -18,5 +18,8 @@
             <li><a href="#">MENU</a></li>
         </ul>
     </nav>
+    <section id="topBanner">
+        <img src="img/b0.jpg" alt="">
+    </section>
 </body>
 </html>
