제품배너 추가

--- a/about.html
+++ b/about.html
@@ -18,5 +18,22 @@
             <li><a href="#">MENU</a></li>
         </ul>
     </nav>
+    <section id="best">
+        <h2>Best Product</h2>
+        <ul>
+            <li><img src="img/poster1.jpg" alt="포스터">
+                <h3>Poster-1</h3>
+            </li>
+            <li><img src="img/poster2.jpg" alt="포스터">
+                <h3>Poster-2</h3>
+            </li>
+            <li><img src="img/poster3.jpg" alt="포스터">
+                <h3>Poster-3</h3>
+            </li>
+            <li><img src="img/poster4.jpg" alt="포스터">
+                <h3>Poster-4</h3>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
