이벤트배너 추가

--- a/about.html
+++ b/about.html
@@ -21,5 +21,8 @@
     <section id="topBanner">
         <img src="img/b0.jpg" alt="">
     </section>
+    <section id="event">
+        <img src="img/s3.png" alt="">
+    </section>
 </body>
 </html>
